--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -27,11 +27,13 @@ dependencyManagement {
 }
 
 dependencies {
+    compile project(':common')
     compile("org.springframework.cloud:spring-cloud-starter-gateway")
     compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
     compile("org.springframework.cloud:spring-cloud-starter-contract-stub-runner"){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
     }
+    compile("org.springframework.kafka:spring-kafka")
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompile("org.springframework.boot:spring-boot-starter-test")
