--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,3 +3,8 @@ reservation-service-url=http://reservation-service
 campsite-catalog-service=http://campsite-catalog-service
 api-path=api
 server.port=8083
+reservation-topic=reservation
+
+spring-kafka-producer-bootstrap-servers=localhost:9092
+spring-kafka-producer-bootstrap-key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring-kafka-producer-bootstrap-value-serializer=org.apache.kafka.common.serialization.StringSerializer
