--- a/gateway/src/main/resources/application-default.properties
+++ b/gateway/src/main/resources/application-default.properties
@@ -1,10 +1,12 @@
-user-service-url=http://user-service
-reservation-service-url=http://reservation-service
-campsite-catalog-service=http://campsite-catalog-service
-api-path=api
-server.port=8083
+#using local endpoints
+user-service-url=http://localhost:8081/
+campsite-catalog-service=http://localhost:8082/
+reservation-service-url=http://localhost:8083/
+api-path=/api
+server.port=8084
 reservation-topic=reservation
 
+#Using local kafka https://kafka.apache.org/quickstart
 spring-kafka-producer-bootstrap-servers=localhost:9092
 spring-kafka-producer-bootstrap-key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring-kafka-producer-bootstrap-value-serializer=org.apache.kafka.common.serialization.StringSerializer
