--- a/reservation-service/src/main/resources/application-k8s.properties
+++ b/reservation-service/src/main/resources/application-k8s.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 server.port=8083
+
+user-service-url=http://user-service/
+reservation-topic=reservation
