Kafka Integrated + Protobuf working

--- a/reservation-service/src/main/resources/application-k8s.properties
+++ b/reservation-service/src/main/resources/application-k8s.properties
@@ -7,5 +7,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 server.port=8083
 
-user-service-url=http://user-service/
+user-service-url=http://user-service
 reservation-topic=reservation
+spring-kafka-consumer-bootstrap-servers=my-cluster-kafka-bootstrap:9092
