--- a/gateway/src/main/resources/application-default.properties
+++ b/gateway/src/main/resources/application-default.properties
@@ -9,4 +9,4 @@ reservation-topic=reservation
 #Using local kafka https://kafka.apache.org/quickstart
 spring-kafka-producer-bootstrap-servers=localhost:9092
 spring-kafka-producer-bootstrap-key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring-kafka-producer-bootstrap-value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring-kafka-producer-bootstrap-value-serializer=com.newisland.gateway.serializer.ReservationCommandProtobufSerializer
