--- a/reservation-service/src/main/resources/application-default.properties
+++ b/reservation-service/src/main/resources/application-default.properties
@@ -7,5 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 server.port=8083
 
-user-service-url=http://localhost:8081/
+user-service-url=http://localhost:8081
 reservation-topic=reservation
+
+spring-kafka-consumer-bootstrap-servers=localhost:9092
