--- a/campsite-catalog-service/src/main/resources/application-default.properties
+++ b/campsite-catalog-service/src/main/resources/application-default.properties
@@ -5,4 +5,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 server.port=8082
