--- a/reservation-service/src/main/resources/application-default.properties
+++ b/reservation-service/src/main/resources/application-default.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 server.port=8083
 
 user-service-url=http://localhost:8081
