--- a/reservation-service/build.gradle
+++ b/reservation-service/build.gradle
@@ -27,6 +27,10 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 }
+springBoot {
+    mainClassName = 'com.newisland.reservation.ReservationApp'
+}
+
 
 test {
     useJUnitPlatform()
