--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -26,6 +26,10 @@ dependencyManagement {
     }
 }
 
+springBoot {
+    mainClassName = 'com.newisland.gateway.GatewayApplication'
+}
+
 dependencies {
     compile project(':common')
     compile("org.springframework.cloud:spring-cloud-starter-gateway")
