--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -11,7 +11,9 @@ sourceCompatibility = '1.8'
 repositories {
     mavenCentral()
 }
-
+springBoot {
+    mainClassName = 'com.newisland.user.UserApp'
+}
 dependencies {
     compile project(':common')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
