--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile project(':common')
     compile("org.springframework.cloud:spring-cloud-starter-gateway")
     compile("org.springframework.cloud:spring-cloud-starter-netflix-hystrix")
+    compile("org.springframework.boot:spring-boot-starter-websocket")
     compile("org.springframework.cloud:spring-cloud-starter-contract-stub-runner"){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
     }
