WebSocket Kafka integration

--- a/reservation-service/src/main/resources/application-default.properties
+++ b/reservation-service/src/main/resources/application-default.properties
@@ -10,5 +10,7 @@ server.port=8083
 
 user-service-url=http://localhost:8081
 reservation-commands-topic=reservation-commands
+reservation-events-topic=reservation-events
 
 spring-kafka-consumer-bootstrap-servers=localhost:9092
+spring-kafka-producer-bootstrap-servers=localhost:9092
