--- a/gateway/src/main/resources/application-default.properties
+++ b/gateway/src/main/resources/application-default.properties
@@ -5,8 +5,11 @@ reservation-service-url=http://localhost:8083/
 api-path=/api
 server.port=8084
 reservation-commands-topic=reservation-commands
+reservation-events-topic=reservation-events
 
 #Using local kafka https://kafka.apache.org/quickstart
 spring-kafka-producer-bootstrap-servers=localhost:9092
+spring-kafka-consumer-bootstrap-servers=localhost:9092
+
 spring-kafka-producer-bootstrap-key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring-kafka-producer-bootstrap-value-serializer=com.newisland.gateway.serializer.ReservationCommandProtobufSerializer
