--- a/gateway/src/main/resources/application-k8s.properties
+++ b/gateway/src/main/resources/application-k8s.properties
@@ -4,8 +4,11 @@ reservation-service-url=http://reservation-service/
 campsite-catalog-service=http://campsite-catalog-service/
 server.port=8084
 reservation-commands-topic=reservation-commands
+reservation-events-topic=reservation-events
 
 #Using Kafka strimzi https://strimzi.io/quickstarts/
 spring-kafka-producer-bootstrap-servers=my-cluster-kafka-bootstrap:9092
+spring-kafka-consumer-bootstrap-servers=my-cluster-kafka-bootstrap:9092
+
 spring-kafka-producer-bootstrap-key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring-kafka-producer-bootstrap-value-serializer=org.apache.kafka.common.serialization.StringSerializer
