--- a/reservation-service/src/main/resources/application-k8s.properties
+++ b/reservation-service/src/main/resources/application-k8s.properties
@@ -9,4 +9,7 @@ server.port=8083
 
 user-service-url=http://user-service
 reservation-commands-topic=reservation-commands
+reservation-events-topic=reservation-events
+
 spring-kafka-consumer-bootstrap-servers=my-cluster-kafka-bootstrap:9092
+spring-kafka-producer-bootstrap-servers=my-cluster-kafka-bootstrap:9092
